@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.2.2 on Thu Jun  7 14:53:18 2007 by denis@dwashington-->
 <glade-interface>
   <widget class="GtkDialog" id="render_details">
     <property name="border_width">5</property>
@@ -1820,6 +1819,7 @@ Text only</property>
     <property name="title" translatable="yes">Theme Details</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="modal">True</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox4">
