@@ -1,3 +1,12 @@
+2007-07-24  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (update_color_buttons_from_settings),
+	(prepare_list), (style_init): improve color scheme matching; simplify
+	code; don't possibly unref cursor thumbs twice; remove redundant color
+	scheme initialization
+	* appearance.glade: make theme details window modal to prevent the
+	user from editing non-custom themes
+
 2007-07-23  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (desktop_init): bump all tooltips code to gtk
